# pycommon

./: .mypy.ini  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  run
.run/: pre_commit.sh
pycommon/: __init__.py  logger.py  my_exceptions.py  my_tvdb.py  settings.py  utils.py
pycommon/data/: config.toml  settings.toml
src/pycommon/: __init__.py  logger.py  my_config.py  my_settings.py  my_subprocess.py  utils.py
tests/: create_old_logs.py  test_logger.py  test_settings.py  test_subprocess.py
tests/testresources/: settings1.toml
