[tool.poetry]
name = "pycommon"
version = "2023.1.1000"
description = "Common python modules I use in different projects"
authors = ["David Lane <cheery.koala5370@fastmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
appdirs = "^1.4.4"
pyqt6 = "^6.5.0"
psutil = "^5.9.5"
tvdb-v4-official = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pylint = "^2.17.2"
mypi = "^0.0.3"
pre-commit = "^3.3.1"


[[tool.poetry.source]]
name = "repositories.fury"
url = "https://pypi.fury.io/dave-lane/"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.bumpver]
current_version = "2023.1.1000"
version_pattern = "YYYY.MM.BUILD"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
[tool.black]
line_length = 100
target-version = ['py38', 'py39', 'py310', 'py311' ]

[tool.isort]
profile = "black"
line_length = 100
